		 Handle charmm improper dihedrals (pre_ffield)
		 List atoms not found (pre_misfit)
	         Rename residues (CYS,HIS) appropriately for force field
 	         Bug fix in index to array cseq (pre_rename)
Jun 05 1998	 Bug fix in residue renaming (pre_rename)
Jun 08 1998	 Compliance with util_print
Jun 09 1998	 Avoid geom_rtdb_load error message
Jun 11 1998	 Add topology modification commands
		 Fix bugs in reading solvent from pdb file
		 Keep name file
Jun 15 1998	 Bug fixes: pre_boxsiz, pre_orient, pre_wrtrst, pre_wrttop
Jun 24 1998	 Fix memory problem occurring in solvent-only preparations
Jul 09 1998      Add positional fix commands
                 Slightly increase hydrogen radius
Jul 14 1998	 Add routine to determine if a segment is amino acid (pre_protein)
		 Put modified residue name on sequence file
		 Number non chain link atoms from 3 up ( instead of all being 3)
		 Fix file name problem in pre_mkrst
		 Expand link array to include global atom number
		 Fix bug in solvation routine
	         Fix bug in bonded list overwrite in pre_mkfrg
		 More diagnostic messages added
		 Fix file name bug in explicit write rst command
Jul 15 1998	 Remove persistency new_top new_seq and new_rst
		 Resize solvent arrays when needed to read rst file
		 Allow coordinate read before solvation
		 Avoid write of ccordinates if explicit command given
		 Bug fix in restart file name
                 Read modified restart format
Jul 16 1998	 Change default value of xpndw to 0.2 nm
Aug 07 1998	 Initilization bug fix in pre_misfit
Aug 07 1998	 Initilization bug fix in pre_short
Aug 10 1998	 Add missing initialization angle constraints
Aug 13 1998	 Add POx in charge determination
Aug 18 1998	 Repair memory leak in pre_charge
		 Initialization bug fix in pre_mklist
		 Destroy geometry object when no longer needed in pre_mkseq
Aug 24 1998	 Add OH charge separation
		 Resolve varying number arguments
		 Single quote strings
Aug 26 1998	 Bug fix in pre_rdrst.F