@@ -79,3 +79,4 @@ Aug 24 1998	 Add OH charge separation
 		 Resolve varying number arguments
 		 Single quote strings
 Aug 26 1998	 Bug fix in pre_rdrst.F
+Aug 28 1998	 Write out segment charges when writing topology file
